--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,6 @@ streamlit>=1.28.0
 pandas>=2.0.0
 numpy>=1.24.0
 sentence-transformers>=2.2.2
-chromadb>=0.4.24 
+chromadb>=0.4.24
+google-cloud-storage>=2.10.0
+gdown>=4.7.1 
