Add LLM health check page, update LLM configs, robust secrets handling, and improve .gitignore for security

--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,9 @@ dmypy.json
 
 #streamlit
 .streamlit/secrets.toml
+
+# Ignore environment variable and secrets files
+.env
+.env.*
+streamlit_secrets.toml
+.streamlit/secrets.toml
