🗂️ Organize project structure
- Move all documentation (.md files) to docs/ folder (local only)
- Move test files to tests/ folder
- Move setup/config scripts to scripts/ folder
- Move sample generation files to samples/ folder
- Move debug utilities to debug/ folder
- Keep only essential files in root: app.py, batch_evaluator.py, README.md, requirements.txt
- Fix datetime deprecation warnings across codebase
- Enhance analysis page for graceful empty data handling
- Update .gitignore to keep .cursor/ and docs/ local only
- 100% functionality preserved with professional structure

--- a/.gitignore
+++ b/.gitignore
@@ -87,10 +87,13 @@ htmlcov/
 .dmypy.json
 dmypy.json 
 
-#cursor
+# Cursor IDE files (local only)
 .cursor/
 
-#streamlit
+# Documentation (local only)
+docs/
+
+# Streamlit secrets
 .streamlit/secrets.toml
 
 # Ignore environment variable and secrets files
