--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,9 @@ streamlit>=1.28.0
 pandas>=2.0.0
 numpy>=1.24.0
 sentence-transformers>=2.2.2
-chromadb>=0.4.24
+chromadb==0.4.14
 google-cloud-storage>=2.10.0
 gdown>=4.7.1 
 plotly>=5.0.0 
 wordcloud>=1.8.0 
+streamlit-sortables 
